kubernetes/apps/observability/grafana/app/ingress-external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-cookjam-dev
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_APP_DOMAIN}"
spec:
  ingressClassName: external
  rules:
    - host: &host "grafana.${SECRET_APP_DOMAIN}"
      http:
        paths:
          - path: /public-dashboards
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
          - path: /api/public
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
          - path: /api/plugins
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
          - path: /public
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
  tls:
    - hosts:
        - *host
